--- a/templates/home.html
+++ b/templates/home.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>Home Page</h1>
-{% if username %}
-    <p>Hello, {{ username }}| you are already logged in</p>
-    <button><a href="/logout">Logout </a></button>
-{% else %}
-  <p>you are not logged in.Please <a href="/login"> Login</a> to access the home page</p>
-{% endif %}
+    {% if firstname %}
+        <p>Hello, {{ firstname }}. You are already logged in.</p>
+        <button><a href="/logout">Logout</a></button>
+    {% else %}
+        <p>You are not logged in. Please <a href="/login">Login</a> to access the home page.</p>
+    {% endif %}
 </body>
 </html>
