--- a/templates/register.html
+++ b/templates/register.html
@@ -4,20 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <style>
+body {
+    padding: 50px;
+}
+
+.container {
+    max-width: 600px;
+    margin: 0 auto;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5); /* Updated box-shadow */
+    padding: 50px;
+}
+ .form-group {
+    margin-bottom: 30px;
+}
+   </style>
+  </head>
+
+    <title>Login Page</title>
 </head>
 <body>
-    <h1>Registeration Page</h1>
+<div class="container">
+    <h1>Registration Form</h1>
 <form method="post" action="/register">
-    <div class="form-group">Name:
-        <input class="form-control" type="text" name="name" id="name">
-    </div>
+     <div class="form-group">
+         <input type="text" name="firstname" class="form-control" placeholder="Enter your firstname" required>
+     </div>
     <div class="form-group">
-        <input class="form-control" type="email" name="email" id="email">
+         <input type="number" name="registration" class="form-control" placeholder="Enter your registration number" required>
+     </div>
+    <div class="form-group">
+         <input type="email" name="email" class="form-control" placeholder="Enter your email" required>
+     </div>
+    <div class="form-group">
+        <input class="form-control" type="password" name="password" id="password" placeholder="Enter your password" required>
     </div>
     <div class="form-btn">
-        <input type="submit" class="btn btn-primary">
+       <input class="btn btn-primary" type="submit" value="Register">
     </div>
 </form>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
