--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -94,6 +94,9 @@
     <div class="mb-3">
         <input type="text" class="form-control" name="last_name" placeholder="Last Name" aria-label="Last Name" aria-describedby="email-addon" required>
     </div>
+                  <div class="mb-3">
+        <input type="text" class="form-control" name="registration_number" placeholder="Registration Number" aria-label="Registration Number" aria-describedby="email-addon" required>
+    </div>
     <div class="mb-3">
         <input type="email" class="form-control" name="email" placeholder="Email" aria-label="Email" aria-describedby="email-addon" required>
     </div>
