--- a/templates/ballot.html
+++ b/templates/ballot.html
@@ -306,6 +306,13 @@
       </div>
     </nav>
 
+
+
+
+
+
+
+
   <div class="fixed-plugin">
     <a class="fixed-plugin-button text-dark position-fixed px-3 py-2">
       <i class="fa fa-cog py-2"> </i>
@@ -548,6 +555,7 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="{{ url_for('static', filename='js/soft-ui-dashboard.min.js') }}"></script>
+</main>
 </body>
 
 </html>
