--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -578,6 +578,7 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="{{ url_for('static', filename='js/soft-ui-dashboard.min.js') }}"></script>
+</main>
 </body>
 
 </html>
