--- a/templates/positions.html
+++ b/templates/positions.html
@@ -23,6 +23,9 @@
   <!-- Nepcha Analytics (nepcha.com) -->
   <!-- Nepcha is a easy-to-use web analytics. No cookies and fully compliant with GDPR, CCPA and PECR. -->
   <script defer data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
+
+
+
 </head>
 
 <body class="g-sidenav-show  bg-gray-100">
@@ -312,72 +315,90 @@
 
 <div class="wrapper">
     <div class="content-wrapper">
-      <section class="content-header">
-        <h1>
-          Manage Positions
-        </h1>
-      </section>
-      <section class="content">
+        <section class="content-header">
+            <h1>
+                Manage Positions
+            </h1>
+        </section>
+        <section class="content">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="box">
+                        <div class="box-header with-border">
+                            <a href="#" id="newPositionButton" class="btn btn-primary btn-sm btn-flat"><i class="fa fa-plus"></i> New</a>
+                        </div>
+                        <div class="box-body">
+                            <table id="example1" class="table table-bordered">
+                                <thead>
+                                <th class="hidden"></th>
+                                <th>Description</th>
+                                <th>Actions</th>
+                                </thead>
+                                <tbody>
+{% for position in positions %}
+<tr>
+    <td>{{ loop.index }}</td>
+    <td>{{ position.description }}</td>
+    <td>
+        <form action="{{ url_for('delete_position') }}" method="post">
+            <input type="hidden" name="position_id" value="{{ position.id }}">
+            <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this position?')">Delete</button>
+        </form>
+    </td>
+</tr>
+{% endfor %}
+</tbody>
 
-        <div class="row">
-          <div class="col-xs-12">
-            <div class="box">
-              <div class="box-header with-border">
-                <a href="#addnew" data-toggle="modal" class="btn btn-primary btn-sm btn-flat"><i class="fa fa-plus"></i> New</a>
-              </div>
-              <div class="box-body">
-                <table id="example1" class="table table-bordered">
-                  <thead>
-                    <th class="hidden"></th>
-                    <th>Description</th>
-                    <th>Maximum Vote</th>
-                    <th>Actions</th>
-                  </thead>
-                  <tbody>
-
-                  </tbody>
-                </table>
-              </div>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-      </section>
+        </section>
     </div>
-  </div>
+</div>
 
-  <script>
-  $(function(){
-    $(document).on('click', '.edit', function(e){
-      e.preventDefault();
-      $('#edit').modal('show');
-      var id = $(this).data('id');
-      getRow(id);
+
+<!-- Add New Position Modal -->
+<div id="addNewPositionModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form method="post" action="{{ url_for('add_position') }}">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Add New Position</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="description">Description:</label>
+                        <input type="text" class="form-control" id="description" name="description" required>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">Add</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- JavaScript Files -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<script>
+    jQuery(document).ready(function(){
+    jQuery('#newPositionButton').click(function(){
+        jQuery('#addNewPositionModal').modal('show');
     });
-
-    $(document).on('click', '.delete', function(e){
-      e.preventDefault();
-      $('#delete').modal('show');
-      var id = $(this).data('id');
-      getRow(id);
+    // Close modal when close button is clicked
+    jQuery('#addNewPositionModal').on('hidden.bs.modal', function () {
+        // Clear form fields if needed
     });
+});
+</script>
 
-  });
-
-  function getRow(id){
-    $.ajax({
-      type: 'POST',
-      url: 'positions_row.php',
-      data: {id:id},
-      dataType: 'json',
-      success: function(response){
-        $('.id').val(response.id);
-        $('#edit_description').val(response.description);
-        $('#edit_max_vote').val(response.max_vote);
-        $('.description').html(response.description);
-      }
-    });
-  }
-  </script>
 
 
 
@@ -627,6 +648,7 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="{{ url_for('static', filename='js/soft-ui-dashboard.min.js') }}"></script>
+</main>
 </body>
 
 </html>
