--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -136,28 +136,7 @@
                 </g>
               </svg>
             </div>
-            <span class="nav-link-text ms-1">Manage Vote</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link  " href="{{ url_for('ballot') }}">
-            <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <svg width="12px" height="12px" viewBox="0 0 46 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <title>Manage ballot</title>
-                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                  <g transform="translate(-1717.000000, -291.000000)" fill="#FFFFFF" fill-rule="nonzero">
-                    <g transform="translate(1716.000000, 291.000000)">
-                      <g transform="translate(1.000000, 0.000000)">
-                        <path class="color-background opacity-6" d="M45,0 L26,0 C25.447,0 25,0.447 25,1 L25,20 C25,20.379 25.214,20.725 25.553,20.895 C25.694,20.965 25.848,21 26,21 C26.212,21 26.424,20.933 26.6,20.8 L34.333,15 L45,15 C45.553,15 46,14.553 46,14 L46,1 C46,0.447 45.553,0 45,0 Z"></path>
-                        <path class="color-background" d="M22.883,32.86 C20.761,32.012 17.324,31 13,31 C8.676,31 5.239,32.012 3.116,32.86 C1.224,33.619 0,35.438 0,37.494 L0,41 C0,41.553 0.447,42 1,42 L25,42 C25.553,42 26,41.553 26,41 L26,37.494 C26,35.438 24.776,33.619 22.883,32.86 Z"></path>
-                        <path class="color-background" d="M13,28 C17.432,28 21,22.529 21,18 C21,13.589 17.411,10 13,10 C8.589,10 5,13.589 5,18 C5,22.529 8.568,28 13,28 Z"></path>
-                      </g>
-                    </g>
-                  </g>
-                </g>
-              </svg>
-            </div>
-            <span class="nav-link-text ms-1">Manage ballot</span>
+            <span class="nav-link-text ms-1">Manage Vote Time</span>
           </a>
         </li>
 
@@ -206,9 +185,7 @@
             </div>
           </div>
           <ul class="navbar-nav  justify-content-end">
-            <li class="nav-item d-flex align-items-center">
-              <a class="btn btn-outline-primary btn-sm mb-0 me-3" target="_blank" href="https://www.creative-tim.com/builder?ref=navbar-soft-ui-dashboard">Online Builder</a>
-            </li>
+
             <li class="nav-item d-flex align-items-center">
               <a href="{{ url_for('logout') }}" class="nav-link text-body font-weight-bold px-0">
                 <i class="fa fa-user me-sm-1"></i>
@@ -309,27 +286,65 @@
 
 
 
-    <div class="wrapper">
+<div class="container-fluid py-4">
+    <div class="row">
+        <div class="col-12">
+            <div class="card mb-4">
+                <div class="card-header pb-0">
+                    <h6>Votes Tally</h6>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <!-- Table for each position -->
+                        {% for position in positions %}
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <h4>{{ position.description }}</h4>
+                                <table class="table table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th>Candidate</th>
+                                            <th>Votes</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <!-- Loop through candidates for this position -->
+                                        {% for candidate in position.candidates %}
+                                        <tr>
+                                            <td>{{ candidate.first_name }} {{ candidate.last_name }}</td>
+                                            <td>{{ candidate.votes }}</td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    <div class="pull-right">
+                        <a href="#print" class="btn btn-success btn-sm btn-flat" onclick="printTally()"><span class="glyphicon glyphicon-print"></span> Print</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
-    <div class="content-wrapper">
+<script>
+  function printTally() {
+    // Hide the print button before printing
+    document.querySelector('.pull-right').style.display = 'none';
+    // Trigger printing
+    window.print();
+    // Show the print button again after printing is done (use a setTimeout to ensure it's shown after printing)
+    setTimeout(function() {
+      document.querySelector('.pull-right').style.display = 'block';
+    }, 1000); // Adjust the delay time if needed
+  }
+</script>
 
-      <section class="content">
 
-        <div class="row">
-          <div class="col-xs-12">
-            <h3>Votes Tally
-              <span class="pull-right">
-                <a href="print.php" class="btn btn-success btn-sm btn-flat"><span class="glyphicon glyphicon-print"></span> Print</a>
-              </span>
-            </h3>
-          </div>
-        </div> <br /><br />
-
-        </section>
-      </div>
-
-  </div>
 
 
 
